# telegram-userbot

./: .gitignore  README.md  main.py  pyproject.toml  russian_news_2020.ipynb
data/: sample.csv
