[project]
name = "telegram-userbot"
version = "0.1.0"
description = "A simple example of using a Telegram userbot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "notebook>=7.3.3",
    "pandas>=2.2.3",
    "pyrogram>=2.0.106",
    "pyromod>=3.1.6",
    "python-decouple>=3.8",
    "tgcrypto>=1.2.5",
]
